# hard-xml

./: .gitlab-ci.yml  Cargo.toml  README.md  renovate.json
hard-xml/: Cargo.toml  README.md
hard-xml-derive/: Cargo.toml
hard-xml-derive/src/: lib.rs  types.rs
hard-xml-derive/src/read/: mod.rs  named.rs  newtype.rs
hard-xml-derive/src/write/: named.rs
hard-xml/src/: lib.rs  xml_reader.rs
test-suite/: Cargo.toml
test-suite/tests/: bool.rs  cdata.rs  default.rs  display.rs  empty.rs  enum.rs  from_str.rs  issue_5.rs  issue_7.rs  log.rs  multiple_lifetimes.rs  nested.rs  string_empty_tag.rs  struct.rs  text.rs  tuple_struct.rs  where_clause.rs  xml_header.rs
