[package]
name = "hard-xml-derive"
version = "0.0.0"
homepage = "https://gitlab.com/kevincox/hard-xml"
repository = "https://gitlab.com/kevincox/hard-xml"
description = "Derive marco of hard-xml."
license = "MIT"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2021"

[lib]
name = "hard_xml_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
