[package]
name = "hard-xml"
version = "0.6.3"
homepage = "https://gitlab.com/kevincox/hard-xml"
repository = "https://gitlab.com/kevincox/hard-xml"
description = "Strong typed xml, based on xmlparser."
license = "MIT"
readme = "README.md"
authors = ["PoiScript <poiscript@gmail.com>"]
keywords = ["xml", "xmlparser", "derive", "proc-macro"]
edition = "2018"

[dependencies]
jetscii = "0.5"
lazy_static = "1.4"
log = { version = "0.4", optional = true }
memchr = "2.4"
hard-xml-derive = { version = "0.6.3", path = "../hard-xml-derive" }
xmlparser = "0.13"

[dev-dependencies]
env_logger = "0.8"
